[package]
name = "typewit"
version = "1.5.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.57.0"
edition = "2021"
license = "Zlib"
description = "type-witness-based abstractions, mostly for emulating polymorphism in const fns"
documentation = "https://docs.rs/typewit/"
readme="./README.md"
keywords = ["no-std", "const_fn"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/typewit/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "LICENSE-ZLIB.md", 
]

[dev-dependencies.arrayvec]
version = "0.7"
default-features = false

[dev-dependencies.trybuild]
version = "1.0"

[features]
default = ["const_marker"]
rust_1_61 = []
rust_stable = ["rust_1_61"]
const_marker = []
nightly_const_marker = ["rust_stable","const_marker"]
alloc = []
mut_refs = []
nightly_mut_refs = ["rust_stable", "mut_refs"]
docsrs = []
__ui_tests = []

[package.metadata.docs.rs]
features = ["alloc", "rust_stable", "nightly_mut_refs", "const_marker", "docsrs"]

